# PhD

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  bases.hpp  basic_mesh.hpp  convergence_test.cpp  cuthho_mesh.hpp  cuthho_square.cpp  hho.hpp  solver_cg.hpp  test1.cpp
apps/agglomeration_tests/: CMakeLists.txt  agglomeration_tests.cpp
apps/convergence_test/: CMakeLists.txt  convergence_test.cpp
apps/cuthho/: CMakeLists.txt  cuthho_square.cpp  mesh.dppm  mesh_dump.m  triangulation_dump.m
apps/cuthho_meth2/: CMakeLists.txt  cuthho.xlsx  cuthho_meth2_square.cpp  cuthho_square.cpp
apps/cuthho_stokes/: CMakeLists.txt  cuthho_stokes.cpp
apps/high_order_interface/: CMakeLists.txt  high_order_interface.cpp
apps/high_order_interface_new/: CMakeLists.txt  high_order_interface_new.cpp
apps/interface/: CMakeLists.txt  interface.cpp
apps/interface_stokes/: CMakeLists.txt  interface_stokes.cpp
apps/interface_stokes_functional/: CMakeLists.txt
apps/interface_stokes_new/: CMakeLists.txt  interface_stokes_new.cpp
apps/obstacle/: CMakeLists.txt  obstacle.cpp
apps/obstacle/results/: convergence.plot  convergence.txt
apps/polymesh/: CMakeLists.txt  mesh-dn.txt  mesh1.txt  mesh2.txt  polymesh.cpp
apps/stabilization_test/: CMakeLists.txt  stabilization_test.cpp
apps/stefano_interface_stokes/: CMakeLists.txt  stefano_interface_stokes.cpp
apps/taylor_green_vortex/: CMakeLists.txt  taylor_green_vortex.cpp
apps/unsteady_interface_stokes/: CMakeLists.txt  unsteady_interface_stokes.cpp
cmake/: FindMKL.cmake  FindTBB.cmake
output/: CMakeLists.txt  autom_tests.tex  autom_tests_stokes.tex  gnuplot_script.txt  gnuplot_script_stokes.txt
src/: mesh.hpp  point.hpp  silo_io.hpp
src/core/: core  solvers
src/core/core_bits/: bases.hpp  basic_geom.hpp  basic_mesh.hpp  level_set.hpp  point.hpp  quadratures.hpp  quadratures_dunavant.hpp  solver_cg.hpp  test_cases.hpp  utils.hpp
src/dataio/: silo_io.hpp
src/methods/: cuthho  hho  transport
src/methods/cuthho_bits/: cut_assemblers.hpp  cuthho.hpp  cuthho_agglomeration.hpp  cuthho_assemblers.hpp  cuthho_export.hpp  cuthho_geom.hpp  cuthho_mesh.hpp  cuthho_utils.hpp
src/methods/hho_bits/: hho.hpp
src/methods/transport_bits/: transport_problem.hpp  transport_scheme.hpp
src/methods/transport_bits/INUTILE/: cell_basis.hpp  output_data.hpp  (+3 more)
