add_subdirectory(convergence_test)
add_subdirectory(cuthho)
add_subdirectory(cuthho_meth2)
add_subdirectory(cuthho_stokes)
add_subdirectory(obstacle)
add_subdirectory(stabilization_test)
add_subdirectory(polymesh)
add_subdirectory(agglomeration_tests)
add_subdirectory(interface)
add_subdirectory(interface_stokes)
add_subdirectory(high_order_interface)
add_subdirectory(taylor_green_vortex)
